--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "rxjs": "^5.5.6",
     "typescript": "^2.7.2",
     "vee-validate": "^2.0.5",
-    "vuetify": "^1.0.4",
+    "vuetify": "^1.1.0-beta.1",
     "winston": "^2.4.0",
     "winston-daily-rotate-file": "^1.7.2"
   },
